Fix of all compilation issues.